# FastApi-pet

./: .env-example  .pre-commit-config.yaml  Makefile  README.md  docker-compose-prod_for_local_testing.yaml  docker-compose.yaml
.github/workflows/: ci-cd.yml  docker-build-push.yml
backend/: Dockerfile  pyproject.toml
backend/app/: Makefile  app_factory.py  main.py  settings.py
backend/app/apps/auth/: auth_handler.py  dependencies.py  password_handler.py  router.py  schemas.py
backend/app/apps/core/: base_crud.py  base_models.py  dependencies.py  schemas.py
backend/app/apps/health/: router.py
backend/app/apps/info/: router.py  schemas.py
backend/app/apps/payments/: router.py  schemas.py
backend/app/apps/products/: crud.py  dependencies.py  models.py  router.py  schemas.py
backend/app/apps/users/: constants.py  crud.py  models.py  router.py  schemas.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2025_12_03_1434-a94764a21fd9_add_users.py  2025_12_04_1706-d126ddb48bf6_add_password_hash.py  2025_12_06_1335-9473476667e8_add_is_admin.py  2025_12_06_1412-c3070afc4785_permissions.py  2025_12_07_1743-7e9020ca0e9c_use_token_since.py  2025_12_10_1714-a1ee62ac7284_category.py  2025_12_12_1654-2b608099724c_create_products.py  2025_12_29_1757-35d0df6776f7_order.py  2026_01_05_1859-678e0f985684_product_image.py
backend/app/services/: betterstack_service.py  redis_service.py  sentry_service.py
backend/app/storage/: s3.py
charts/shop-api/: Chart.yaml  values.yaml
documentation/: mkdocs.yml
infrastructure/: kustomization.yaml
nginx/: nginx.conf
(+60 files in other folders)
